# 拓扑结构相同的子树
add_executable(3_2_identical_tree 3_2_identical_tree.cpp)

# 拓扑结构相同的子树
add_executable(3_3_Transform_string 3_3_Transform_string.cpp)

# 旋转词
add_executable(3_5_rotated_string 3_5_rotated_string.cpp)

# 逆序词
add_executable(3_6_inverse_word 3_6_inverse_word.cpp)

# 字符串位移 ABCDE -> DEABC
add_executable(3_7_string_deform 3_7_string_deform.cpp)

# 最小字典序排列
add_executable(3_8_dict_order 3_8_dict_order.cpp)

# 字符替换
add_executable(3_10_space_replace 3_10_space_replace.cpp)

# 括号匹配
add_executable(3_11_parentheses_matching 3_11_parentheses_matching.cpp)

# 最长无重复字符子串
add_executable(3_12_substr_with_norepeat 3_12_substr_with_norepeat.cpp)


# 计算最短回文字符串的长度
add_executable(others_1_shortest_huiwen_string others_1_shortest_huiwen_string.cpp)

# 统计子串及其对应的个数
add_executable(others_2_sub_str_nums others_2_sub_str_nums.cpp)

# 同形词的判断
add_executable(others_3_tong_xing_ci others_3_tong_xing_ci.cpp)